--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,6 @@ machine:
   services:
     - docker
   environment:
-    registry_root: gcr.io
-    image_name: alpine-ruby
     CLOUDSDK_CORE_DISABLE_PROMPTS: 1
 
 dependencies:
@@ -15,11 +13,10 @@ dependencies:
 
 test:
   override:
-    - docker build -t=$registry_root/$gcloud_project/$image_name:b$CIRCLE_BUILD_NUM .
+    - docker build -t=$registry_root/$image_name:b$CIRCLE_BUILD_NUM .
 
 deployment:
   registry:
     branch: master
     commands:
-      - echo $registry_root/$gcloud_project/$image_name:b$CIRCLE_BUILD_NUM
-      - docker push $registry_root/$gcloud_project/$image_name:b$CIRCLE_BUILD_NUM
+      - docker push $registry_root/$image_name:b$CIRCLE_BUILD_NUM
