--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,8 @@ dependencies:
   pre:
     - curl https://sdk.cloud.google.com | bash
     - echo notasecret > /tmp/gcloud_key_password
-    - gcloud auth activate-service-account --key-file FOO --password-file /tmp/gcloud_key_password --project $gcloud_project
+    - echo $gcloud_p12_key_base64 | openssl enc -base64 -d > /tmp/gcloud_p12_key
+    - gcloud auth activate-service-account --key-file /tmp/gcloud_p12_key --password-file /tmp/gcloud_key_password --project $gcloud_project
     - gcloud auth list
 
 test:
