--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
     - curl https://sdk.cloud.google.com | bash
     - echo notasecret > /tmp/gcloud_key_password
     - echo $gcloud_p12_key_base64 | openssl enc -base64 -d > /tmp/gcloud_p12_key
-    - gcloud auth activate-service-account --key-file /tmp/gcloud_p12_key --password-file /tmp/gcloud_key_password --project $gcloud_project
+    - gcloud auth activate-service-account $gcloud_account_email --key-file /tmp/gcloud_p12_key --password-file /tmp/gcloud_key_password --project $gcloud_project
     - gcloud auth list
 
 test:
