--- a/circle.yml
+++ b/circle.yml
@@ -4,11 +4,9 @@ machine:
 
 dependencies:
   pre:
-    - mkdir -p /tmp/gcloud_keys
-    - echo notasecret > /tmp/gcloud_keys/password
-    - echo $gcloud_p12_key_base64 | openssl enc -base64 -d > /tmp/gcloud_keys/p12_key
+    - echo $gcloud_json_key_base64 | openssl enc -base64 -d > /tmp/gcloud_key.json
     - docker pull google/cloud-sdk
-    - docker run --name gcloud-config -v /tmp/gcloud_keys:/tmp/gcloud_keys google/cloud-sdk gcloud auth activate-service-account $gcloud_account_email --key-file /tmp/gcloud_keys/p12_key --password-file /tmp/gcloud_keys/password --project $gcloud_project
+    - docker run --name gcloud-config -v /tmp/gcloud_key.json:/tmp/gcloud_key.json google/cloud-sdk gcloud auth activate-service-account $gcloud_account_email --key-file /tmp/gcloud_key.json
     - docker run --volumes-from gcloud-config google/cloud-sdk gcloud auth list
 
 test:
