--- a/circle.yml
+++ b/circle.yml
@@ -4,11 +4,11 @@ machine:
 
 dependencies:
   pre:
-    - echo $gcloud_json_key_base64 | openssl enc -base64 -d > /tmp/gcloud_key.json
+    - echo $gcloud_json_key_base64 | sed 's/ //g' | base64 -d > /tmp/gcloud_key.json
     - docker pull google/cloud-sdk
     - docker run --name gcloud-config -v /tmp/gcloud_key.json:/tmp/gcloud_key.json google/cloud-sdk gcloud auth activate-service-account $gcloud_account_email --key-file /tmp/gcloud_key.json
     - docker run --name gcloud-dockercfg --volumes-from gcloud-config google/cloud-sdk gcloud preview docker -a
-    - docker cp gcloud-dockercfg:/.dockercfg /
+    - docker cp gcloud-dockercfg:/.dockercfg $HOME
 
 test:
   override:
