--- a/circle.yml
+++ b/circle.yml
@@ -5,10 +5,9 @@ machine:
 dependencies:
   pre:
     - echo $gcloud_json_key_base64 | sed 's/ //g' | base64 -d > /tmp/gcloud_key.json
-    - docker pull google/cloud-sdk
-    - docker run --name gcloud-config -v /tmp/gcloud_key.json:/tmp/gcloud_key.json google/cloud-sdk gcloud auth activate-service-account $gcloud_account_email --key-file /tmp/gcloud_key.json
-    - docker run --name gcloud-dockercfg --volumes-from gcloud-config google/cloud-sdk gcloud preview docker -a
-    - docker cp gcloud-dockercfg:/.dockercfg $HOME
+    - curl https://sdk.cloud.google.com | bash
+    - gcloud auth activate-service-account $gcloud_account_email --key-file /tmp/gcloud_key.json
+    - gcloud preview docker -a
 
 test:
   override:
