--- a/circle.yml
+++ b/circle.yml
@@ -3,13 +3,16 @@ machine:
     - docker
   environment:
     CLOUDSDK_CORE_DISABLE_PROMPTS: 1
+    image_name: alpine-ruby
 
 dependencies:
   pre:
     - echo $gcloud_json_key_base64 | sed 's/ //g' | base64 -d > /tmp/gcloud_key.json
     - curl https://sdk.cloud.google.com | bash
     - gcloud auth activate-service-account $gcloud_account_email --key-file /tmp/gcloud_key.json
-    - gcloud preview docker -a
+    - gcloud docker -a
+    - docker pull $registry_root/alpine-ruby:b36
+    - docker tag $registry_root/alpine-ruby:b36 codeclimate/alpine-ruby:b36
 
 test:
   override:
